# protobus

./: Android.bp  Readme.txt
cmake/: CMakeLists.txt  cpp.cmake  example.cmake  idl-gen.cmake  java.cmake
cmake/example/: CMakeLists.txt  idl-gen.cmake
cpp/example/: CMyMediaPlayerService.hpp  fdbpbclient.cpp  fdbpbserver.cpp
cpp/imp/: CFdbPbChannel.cpp  CFdbPbChannel.h  CFdbPbComponent.cpp
cpp/public/protobus/: CFdbPbComponent.h  CFdbPbResponse.h  CFdbRpcController.h  protobus.h
idl/: fdbus-pb.Example.proto  protobus.proto
idl/example/: fdbus-pb.Example.proto
java/example/: PBComponentClient.java  PBComponentServer.java
java/src/ipc/fdbus/: FdbusPBChannel.java  FdbusPBComponent.java  FdbusPBController.java  FdbusProtoBuilder.java
python/: FdbusPBComponent.py  protobus.py
python/example/: PBComponentClient.py  PBComponentServer.py
